<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dashboard"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_language"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvNamaLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@id/tvNamaLabel"
        app:layout_constraintStart_toEndOf="@id/tvNamaLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/tvNimLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/label_nim"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etNama"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nim"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@id/tvNimLabel"
        app:layout_constraintStart_toStartOf="@id/etNama"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvIpkLabel"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/label_ipk"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etNim"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etIpk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ipk"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@id/tvIpkLabel"
        app:layout_constraintStart_toStartOf="@id/etNama"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_profile"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etIpk"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>